--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -1,3 +1,34 @@
-$background-color: #d7d7d7
+// Colors
+$almost-black: #0f1112
+$brownish-grey: #666666
+$desert: #ccac5b
+$dark-grey: #22272b
+$cool-gray: #a7a9ac
+$white: #000000
 
-$header-font-color: #0f0f0f
+// Font styles
+@mixin header_big
+    font-weight: 600
+    font-size: 3.6em
+    letter-spacing: 0.15em
+
+@mixin header_sml_semibold
+    font-weight: 600
+    font-size: 2.4em
+    letter-spacing: 1.8em
+    text-align: center
+    
+@mixin header_sml
+    font-weight: 400
+    font-size: 2.4em
+    text-align: center
+    
+@mixin basic_exp_semibold
+    font-weight: 600
+    font-size: 1.4em
+    letter-spacing: 0.9em
+    
+@mixin basic
+    font-weight: 400
+    font-size: 1.4em
+    letter-spacing: 0.1em
