--- a/src/styles/theme.sass
+++ b/src/styles/theme.sass
@@ -5,10 +5,5 @@ html
 
 body
   margin: 0
-
-main
-  width: 80%
-  margin: 4rem auto 0
-  padding: 2rem
-  border-radius: 1rem
-  background: $background-color
+  padding: 0
+  font-family: 'Open Sans', sans-serif
