Simple fixes in Header.sass and Footer.sass

--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -41,5 +41,7 @@
         text-decoration: none
         @include basic
         
-    &__link:hover
+    &__link
+        
+        &:hover
         text-decoration: underline
