--- a/src/view/LaunchDetails/LaunchDetails.sass
+++ b/src/view/LaunchDetails/LaunchDetails.sass
@@ -1,1 +1,13 @@
-@import "~styles/variables"  // '~' informs sass-loader that is not relative path
+@import "~styles/variables"
+
+.launch-details
+
+    &__header
+        padding: 1.5em
+        background-color: $almost-black
+        display: flex
+        justify-content: center
+        align-items: center
+    
+    &__logo
+        height: 35px
