Added styles for section mission links

--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -4,7 +4,7 @@ $brownish-grey: #666666
 $desert: #ccac5b
 $dark-grey: #22272b
 $cool-gray: #a7a9ac
-$white: #000000
+$white: #ffffff
 
 // Font styles
 @mixin header_big
