--- a/src/view/LaunchDetails/LaunchDetails.sass
+++ b/src/view/LaunchDetails/LaunchDetails.sass
@@ -11,3 +11,48 @@
     
     &__logo
         height: 35px
+
+    &__columns
+        display: flex
+
+    &__first-column
+        width: 50%
+    
+    &__second-column
+        width: 50%
+
+.mission-links
+    display: flex
+    flex-direction: column
+    justify-content: flex-end
+    align-items: center
+    background: url('../../assets/img/rocket.png') no-repeat
+    background-position: center
+    background-size: cover
+    min-height: 600px
+    
+    &__list
+        padding: 0
+        display: flex
+        list-style-type: none
+        margin-bottom: 10em
+        
+
+    &__heading
+        text-transform: uppercase
+        color: $white
+        @include header_sml
+        letter-spacing: .9em
+
+    &__link
+        padding: .5em 2em
+        margin: 1em
+        color: $white
+        text-transform: uppercase
+        text-decoration: none
+        border: 1px solid $white
+        border-radius: 100px
+        @include basic
+
+        &:hover
+            opacity: 0.7
