Added styles for LaunchDetails

--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -1,7 +1,7 @@
 @import "~styles/variables"
 
 .footer
-    padding: 1em
+    padding: 2em 4em
     background-color: $dark_grey
     display: flex
     justify-content: space-between
