--- a/src/view/LaunchDetails/LaunchDetails.sass
+++ b/src/view/LaunchDetails/LaunchDetails.sass
@@ -15,6 +15,7 @@
     &__start-date
         @include basic
         color: $cool-gray
+        text-transform: uppercase
 
     &__rocket-name
         margin-bottom: 0
