--- a/src/view/LaunchDetails/LaunchDetails.sass
+++ b/src/view/LaunchDetails/LaunchDetails.sass
@@ -8,7 +8,30 @@
         display: flex
         justify-content: center
         align-items: center
+        position: relative
     
+    &__go-back-btn
+        display: flex
+        justify-content: center
+        align-items: center
+        flex-direction: row
+        background-color: transparent
+        border: none
+        color: $desert
+        text-transform: uppercase
+        @include basic
+        letter-spacing: .8em
+        position: absolute
+        top: 2em
+        left: 1em
+        cursor: pointer
+
+        &::before
+            content: ''
+            height: 10px
+            width: 30px
+            background: url('../../assets/img/arrow_pointer.png') no-repeat
+
     &__logo
         height: 35px
 
