Added styles for filter buttons

--- a/src/view/LaunchesList/LaunchesList.sass
+++ b/src/view/LaunchesList/LaunchesList.sass
@@ -15,7 +15,7 @@
         height: 50vh
         background: url('../../assets/img/moon.png') no-repeat
         background-size: 80%
-        background-position: bottom center
+        background-position: top center
 
     &__text
         text-transform: uppercase
