--- a/src/view/LaunchesList/LaunchesList.sass
+++ b/src/view/LaunchesList/LaunchesList.sass
@@ -25,3 +25,51 @@
 
     &__logo
         width: 50%
+
+    &__launches
+        width: 80vw
+        display: flex
+        flex-direction: column
+
+        &:nth-child(odd)
+            align-self: flex-end
+
+    &__error
+        padding: 1em
+        @include basic
+        text-transform: uppercase
+        color: $white
+        text-align: center
+        
+.launch
+    padding: 2em 0
+    width: 50%
+    text-transform: uppercase
+    color: $white
+    @include basic
+    cursor: pointer
+
+    &:nth-child(even)
+        align-self: flex-end
+
+    &__date
+        letter-spacing: .8em
+
+    &__list
+        padding: 0
+        margin: 0
+        list-style-type: none
+        display: flex
+        flex-direction: row
+
+    &__arrow
+        margin: 1em 0
+        height: 3px
+        width: 100%
+        background-color: $desert
+
+    &__list-item
+        padding-right: 1em
+
+    &__name
+        color: $cool-gray
