Added styles for Loading component

--- a/src/components/UI/Loading/Loading.sass
+++ b/src/components/UI/Loading/Loading.sass
@@ -1,1 +1,8 @@
+@import "~styles/variables"
+
 .loading
+    padding: 2em 0
+    text-transform: uppercase
+    @include header_sml
+    color: $white
+    text-align: center
