--- a/src/view/LaunchesList/LaunchesList.sass
+++ b/src/view/LaunchesList/LaunchesList.sass
@@ -27,13 +27,14 @@
         width: 50%
 
     &__launches
+        padding: 5em 0
         width: 80vw
         display: flex
         flex-direction: column
 
         &:nth-child(odd)
             align-self: flex-end
-
+            
     &__error
         padding: 1em
         @include basic
@@ -42,15 +43,18 @@
         text-align: center
         
 .launch
-    padding: 2em 0
-    width: 50%
+    padding: 2em 5%
+    width: 40%
     text-transform: uppercase
     color: $white
     @include basic
     cursor: pointer
+    border-right: 2px dashed $cool-gray
 
     &:nth-child(even)
         align-self: flex-end
+        border-left: 2px dashed $cool-gray
+        border-right: none
 
     &__date
         letter-spacing: .8em
@@ -67,9 +71,21 @@
         height: 3px
         width: 100%
         background-color: $desert
+        position: relative
+
+    &__arrow-icon
+        width: 10px
+        transform: rotate(180deg)
+        position: absolute
+        top: -4px
+        right: -4px
+        z-index: 2
+
 
     &__list-item
+        display: flex
         padding-right: 1em
 
     &__name
         color: $cool-gray
+        padding-right: .5em
