--- a/src/components/LaunchDetails/LaunchDetails.sass
+++ b/src/components/LaunchDetails/LaunchDetails.sass
@@ -99,6 +99,7 @@
         text-decoration: none
         border: 1px solid $white
         border-radius: 100px
+        cursor: pointer
         @include basic
 
         &:hover
