--- a/src/components/LaunchesList/LaunchesList.sass
+++ b/src/components/LaunchesList/LaunchesList.sass
@@ -1,11 +1,12 @@
 @import "~styles/variables"
 
 .launches-list
-    display: flex
-    align-items: center
-    flex-direction: column
     background-color: $almost-black
     min-height: 100vh
+
+    &__wrapper
+        max-width: 1200px
+        margin: 0 auto
 
     &__top
         display: flex
@@ -22,18 +23,17 @@
         @include header_sml
         letter-spacing: .8em
         color: $cool-gray
+        @media (max-width: 480px)
+            font-size: 16px
 
     &__logo
         width: 50%
 
     &__launches
         padding: 5em 0
-        width: 80vw
+        width: 100%
         display: flex
         flex-direction: column
-
-        &:nth-child(odd)
-            align-self: flex-end
             
     &__error
         padding: 1em
@@ -43,19 +43,27 @@
         text-align: center
         
 .launch
-    padding: 2em 5%
-    width: calc(40% - 1px)
+    padding: 2em 2%
+    width: calc(46% - 1px)
     text-transform: uppercase
     color: $white
     @include basic
     cursor: pointer
     border-right: 1px dashed $cool-gray
+    @media (max-width: 900px) 
+        width: 90%
+        border-right: none
+        margin: 0 auto
 
     &:nth-child(even)
-        width: 40%
+        width: 46%
         align-self: flex-end
         border-left: 1px dashed $cool-gray
         border-right: none
+        @media (max-width: 900px) 
+            width: 90%
+            border-left: none
+            align-self: flex-start
 
     &__date
         letter-spacing: .8em
@@ -81,7 +89,6 @@
         top: -4px
         right: -4px
         z-index: 2
-
 
     &__list-item
         display: flex
