--- a/src/components/FilterButtons/FilterButtons.sass
+++ b/src/components/FilterButtons/FilterButtons.sass
@@ -2,6 +2,11 @@
 
 .filter-buttons
     margin-top: 3em
+    display: flex
+    justify-content: center
+    align-items: center
+    @media (max-width: 480px)
+        flex-direction: column
 
     &__button
         padding: .5em 2em
@@ -14,6 +19,13 @@
         @include basic
         cursor: pointer
         opacity: .7
+        @media (max-width: 700px)
+            padding: .5em 1em
+            margin: .5em
+            font-size: 1.2em
+        @media (max-width: 480px)
+            width: 140px
+
 
         &:focus
             box-shadow: 0px 0px 5px 1px $white
