--- a/src/components/LaunchDetails/LaunchDetails.sass
+++ b/src/components/LaunchDetails/LaunchDetails.sass
@@ -7,8 +7,9 @@
         display: flex
         justify-content: center
         align-items: center
-        position: relative
-    
+        @media screen and (max-width: 900px)
+            padding: 2em 2em
+
     &__go-back-btn
         display: flex
         justify-content: center
@@ -24,6 +25,11 @@
         top: 2em
         left: 1em
         cursor: pointer
+        @media screen and (max-width: 900px)
+            letter-spacing: .4em
+            top: 1.8em
+        @media screen and (max-width: 600px)
+            color: $almost-black
 
         &::before
             content: ''
@@ -33,7 +39,10 @@
 
     &__logo
         height: 35px
-
+        @media screen and (max-width: 900px)
+            height: 25px
+            z-index: 2
+    
     &__start-date
         @include basic
         color: $cool-gray
@@ -43,6 +52,8 @@
         margin-bottom: 0
         @include header_big
         text-transform: uppercase
+        @media screen and (max-width: 900px)
+            text-align: center
 
     &__countdown
         @include basic
@@ -52,18 +63,33 @@
         display: block
         padding: 5em
         max-width: 300px
+        @media screen and (max-width: 900px)
+            padding: 3em
 
     &__columns
         padding: 2em 4em
         display: flex
+        @media screen and (max-width: 900px)
+            flex-direction: column
+            padding: 1em 2em
 
     &__first-column
         padding: 2em
         width: 50%
-    
+        @media screen and (max-width: 900px)
+            padding: 2em 0
+            width: 100%
+            display: flex
+            flex-direction: column
+            justify-content: center
+            align-items: center
+
     &__second-column
         padding: 2em
         width: 50%
+        @media screen and (max-width: 900px)
+            padding: 2em 0
+            width: 100%
 
 .mission-links
     padding: 2em 4em
@@ -75,18 +101,25 @@
     background-position: center
     background-size: cover
     min-height: 600px
+    @media screen and (max-width: 900px)
+        padding: 2em
     
     &__list
         padding: 0
         display: flex
         list-style-type: none
         margin-bottom: 10em
-        
+        @media screen and (max-width: 460px)
+            flex-direction: column
+            justify-content: center
+            margin-bottom: 2em
+
     &__heading
         text-transform: uppercase
         color: $white
         @include header_sml
         letter-spacing: .9em
+        text-align: center
 
     &__link
         padding: .5em 2em
@@ -98,6 +131,14 @@
         border-radius: 100px
         cursor: pointer
         @include basic
+        @media screen and (max-width: 900px)
+            padding: .5em 1em
+            margin: .5em
+            font-size: 12px
+            display: inline-block
+        @media screen and (max-width: 460px)
+            width: 130px
+            text-align: center
 
         &:hover
             opacity: 0.7
