--- a/src/components/LaunchesList/LaunchesList.sass
+++ b/src/components/LaunchesList/LaunchesList.sass
@@ -49,7 +49,9 @@
     color: $white
     @include basic
     cursor: pointer
+    border: 0
     border-right: 1px dashed $cool-gray
+    background-color: transparent
     @media (max-width: 900px) 
         width: 90%
         border-right: none
