Updated responsive timeline styles

--- a/src/components/LaunchesList/LaunchesList.sass
+++ b/src/components/LaunchesList/LaunchesList.sass
@@ -45,6 +45,8 @@
             left: 50%
             height: 100%
             border: 1px dashed $cool-gray
+            @media (max-width: 900px)
+                display: none
             
     &__error
         padding: 1em
