--- a/src/components/LaunchesList/LaunchesList.sass
+++ b/src/components/LaunchesList/LaunchesList.sass
@@ -30,20 +30,21 @@
         width: 50%
 
     &__launches
-        margin: 5em 0
+        padding: 5em 0
         width: 100%
         display: flex
         flex-direction: column
         position: relative
 
         &::after
+            margin: 5em 0
             content: ""
             position: absolute
             z-index: 1
             top: 0
             bottom: 0
             left: 50%
-            height: 100%
+            height: calc(100% - 10em)
             border: 1px dashed $cool-gray
             @media (max-width: 900px)
                 display: none
