Updated line styles in LaunchDataSection

--- a/src/components/LaunchDataSection/LaunchDataSection.sass
+++ b/src/components/LaunchDataSection/LaunchDataSection.sass
@@ -18,15 +18,39 @@
         flex-wrap: wrap
         flex-direction: row
         list-style-type: none
+        position: relative
+
+        &::before
+            margin: .5em 0
+            content: ""
+            position: absolute
+            z-index: 1
+            top: 0
+            bottom: 0
+            left: 0
+            height: calc(100% - 1em)
+            border: 1px dashed $cool-gray
+
+        &::after
+            margin: .5em 0
+            content: ""
+            position: absolute
+            z-index: 1
+            top: 0
+            bottom: 0
+            left: 47%
+            height: calc(100% - 1em)
+            border: 1px dashed $cool-gray
+            @media screen and (max-width: 900px)
+                display: none
 
     &__item
         padding: .5em 0 .5em 2em
-        width: calc(50% - 4em - 2px)
+        width: calc(50% - 4em)
         @include basic
         text-transform: uppercase
-        border-left: 1px dashed $cool-gray
         @media screen and (max-width: 900px)
-            width: calc(100% - 4em - 2px)
+            width: calc(100% - 4em)
 
     &__label
         color: $cool-gray
