--- a/src/components/UI/Loading/Loading.sass
+++ b/src/components/UI/Loading/Loading.sass
@@ -1,8 +1,28 @@
 @import "../../../styles/_variables.sass"
 
-.loading
-    padding: 2em 0
-    text-transform: uppercase
-    @include header_sml
-    color: $white
-    text-align: center
+.loading 
+  width: 100px
+  height: 100px
+  margin: 10em auto
+  background-color: #eeeeee
+  border-radius: 100%
+  -webkit-animation: sk-scaleout 1.0s infinite ease-in-out
+  animation: sk-scaleout 1.0s infinite ease-in-out
+
+@-webkit-keyframes sk-scaleout 
+  0% 
+    -webkit-transform: scale(0)
+  
+  100% 
+    -webkit-transform: scale(1)
+    opacity: 0
+
+@keyframes sk-scaleout 
+  0% 
+    -webkit-transform: scale(0)
+    transform: scale(0)
+
+  100% 
+    -webkit-transform: scale(1)
+    transform: scale(1)
+    opacity: 0
