--- a/src/styles/theme.sass
+++ b/src/styles/theme.sass
@@ -7,3 +7,8 @@ body
   margin: 0
   padding: 0
   font-family: 'Open Sans', sans-serif
+
+.remove-focus input:focus,
+.remove-focus a:focus,
+.remove-focus button:focus 
+    outline: none
