--- a/src/components/LaunchesList/LaunchesList.sass
+++ b/src/components/LaunchesList/LaunchesList.sass
@@ -65,6 +65,9 @@
     cursor: pointer
     border: 0
     background-color: transparent
+    display: flex
+    flex-direction: column
+    justify-content: flex-start
     @media (max-width: 900px) 
         width: 90%
         margin: 0 auto
