--- a/src/styles/theme.sass
+++ b/src/styles/theme.sass
@@ -8,7 +8,8 @@ body
   padding: 0
   font-family: 'Open Sans', sans-serif
 
-.remove-focus input:focus,
-.remove-focus a:focus,
-.remove-focus button:focus 
-    outline: none
+main:not(.user-is-tabbing) button:focus,
+main:not(.user-is-tabbing) input:focus,
+main:not(.user-is-tabbing) select:focus,
+main:not(.user-is-tabbing) textarea:focus 
+  outline: none
