Added animation for select launch details for UX purposes

--- a/src/components/LaunchesList/LaunchesList.sass
+++ b/src/components/LaunchesList/LaunchesList.sass
@@ -72,6 +72,9 @@
         width: 90%
         margin: 0 auto
 
+    &:hover &__arrow
+        width: 110%
+
     &:nth-child(even)
         width: 46%
         align-self: flex-end
@@ -96,6 +99,7 @@
         width: 100%
         background-color: $desert
         position: relative
+        transition: .5s
 
     &__arrow-icon
         width: 10px
